<resources>
    <string name="conversation_ai_conversation">Conversational AI</string>
    <string name="conversation_language_zh">Chinese</string>
    <string name="conversation_language_en">English</string>
    <string name="conversation_tip_welcome">Hello, I\'m the AI assistant of Tencent RTC! You can experience voice conversation with me, ask me questions, or seek advice. I\'m looking forward to chatting with you. 😄</string>
    <string name="conversation_tip_security">The conversation content is generated by a third-party AI and is for experience only. Do not input personal information or any illegal content. Please ensure a compliant experience.</string>
    <string name="conversation_tip_time">The experience duration is only 10 minutes, so make the most of it~</string>
    <string name="conversation_voice_dialogue">Voice Call</string>

    <string name="conversation_ai_interaction_listening">Listening</string>
    <string name="conversation_ai_interaction_interrupting">Interrupt</string>
    <string name="conversation_ai_state_listening">Listening…</string>
    <string name="conversation_ai_state_thinking">Thinking…</string>
    <string name="conversation_tip_experience">The content is generated by third-party AI and is for experience reference only.</string>
    <string name="conversation_tip_left_time">Duration</string>
    <string name="conversation_permission_mic_reason_title">%s applies for access to the microphone</string>
    <string name="conversation_permission_mic_reason">Needs access to your microphone, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc.</string>
    <string name="conversation_tips_start_audio">Please turn on the microphone permission first</string>
    <string name="conversation_mic_mute">Mute</string>
    <string name="conversation_mic_unmute">Unmute</string>
    <string name="conversation_open_speaker">Turn on</string>
    <string name="conversation_close_speaker">Turn off</string>
    <string name="conversation_pause">Pause</string>
    <string name="conversation_continue">Continue</string>
    <string name="conversation_hang_up">Hang up</string>
    <string name="conversation_tap_to_interrupt">You can tap the screen to interrupt the answer</string>
    <string name="conversation_speech_to_interrupt">You can interrupt the answer by speaking</string>
    <string name="conversation_tip_experience_time_out">The experience duration has ended. If you need to continue the experience or learn more, please contact us.</string>
    <string name="conversation_close">Close</string>
    <string name="conversation_contact_us">Contact Us</string>
    <string name="conversation_is_satisfied_conversation">Are you satisfied with this conversation?</string>
    <string name="conversation_very_dissatisfied">Very Dissatisfied</string>
    <string name="conversation_dissatisfied">Dissatisfied</string>
    <string name="conversation_neutral">Neutral</string>
    <string name="conversation_satisfied">Satisfied</string>
    <string name="conversation_very_satisfied">Very Satisfied</string>
    <string name="conversation_call_latency">Call Latency</string>
    <string name="conversation_noise_suppression">Noise Suppression</string>
    <string name="conversation_ai_response">AI Response</string>
    <string name="conversation_interactive_experience">Interactive Experience</string>
    <string name="conversation_enter_your_suggestions">Please enter your suggestions</string>
    <string name="conversation_skip">Skip</string>
    <string name="conversation_submit_feedback">Submit Feedback</string>
    <string name="conversation_status_listening">Listening</string>
    <string name="conversation_status_tap_to_interrupt">Tap to interrupt</string>
</resources>