<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/conversation_bg_dialog">

        <TextView
            android:id="@+id/conversation_tv_experience_timeout"
            android:layout_width="252dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/conversation_tip_experience_time_out"
            android:textColor="@color/conversation_text_color_primary"
            android:textSize="16sp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/conversation_btn_close_dialog"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/conversation_bg_button_module"
            android:text="@string/conversation_close"
            android:textColor="@color/conversation_text_color_primary"
            android:textSize="14sp"
            android:textAllCaps="false"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="@+id/conversation_tv_experience_timeout"
            app:layout_constraintTop_toBottomOf="@+id/conversation_tv_experience_timeout"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/conversation_btn_contact_us"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:background="@drawable/conversation_bg_button_default"
            android:text="@string/conversation_contact_us"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/conversation_tv_experience_timeout"
            app:layout_constraintTop_toTopOf="@+id/conversation_btn_close_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>
