<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/conversation_bg_color_default"
    android:orientation="vertical"
    tools:context=".AIConversationHomeActivity">

    <Button
        android:id="@+id/conversation_btn_back_from_welcome"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/conversation_ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:text="@string/conversation_ai_conversation"
        android:textColor="@color/conversation_text_color_primary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/conversation_btn_back_from_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/conversation_btn_back_from_welcome" />

    <LinearLayout
        android:id="@+id/conversation_ll_switch_language"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="17dp"
        android:background="@drawable/conversation_bg_switch_language"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/conversation_btn_back_from_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/conversation_btn_back_from_welcome">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/conversation_ic_language" />

        <TextView
            android:id="@+id/conversation_tv_language"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/conversation_language_zh"
            android:textColor="@color/conversation_text_color_primary"
            android:textSize="14sp" />

    </LinearLayout>

    <VideoView
        android:id="@+id/conversation_vv_ai_speech_animation"
        android:layout_width="178dp"
        android:layout_height="178dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversation_btn_back_from_welcome" />

    <TextView
        android:id="@+id/conversation_tv_tip_welcome"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:text="@string/conversation_tip_welcome"
        android:textColor="@color/conversation_text_color_primary"
        android:textSize="17sp"
        android:background="@drawable/conversation_bg_ai_speech_bubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversation_vv_ai_speech_animation" />

    <TextView
        android:id="@+id/conversation_tv_tip_security"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:text="@string/conversation_tip_security"
        android:textColor="@color/conversation_text_color_primary"
        android:textSize="17sp"
        android:background="@drawable/conversation_bg_ai_speech_bubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversation_tv_tip_welcome"/>

    <TextView
        android:id="@+id/conversation_tv_tip_time"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="12dp"
        android:text="@string/conversation_tip_time"
        android:textColor="@color/conversation_text_color_primary"
        android:textSize="17sp"
        android:background="@drawable/conversation_bg_ai_speech_bubble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conversation_tv_tip_security" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/conversation_cl_start_conversation"
        android:layout_width="353dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/conversation_bg_start_conversation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/conversation_iv_start_conversation"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@drawable/conversation_ic_start_conversation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/conversation_tv_start_conversation"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed" />

        <TextView
            android:id="@+id/conversation_tv_start_conversation"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/conversation_voice_dialogue"
            android:textSize="17sp"
            android:textColor="@color/conversation_text_color_primary95"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/conversation_iv_start_conversation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>