<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:background="@color/conversation_bg_color_default"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/conversation_tv_satisfaction_survey"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:gravity="center"
        android:text="@string/conversation_is_satisfied_conversation"
        android:textSize="20sp"
        android:textColor="@color/conversation_text_color_primary95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/conversation_iv_very_dissatisfied"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/conversation_ic_very_dissatisfied_dark"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/conversation_iv_dissatisfied"
        app:layout_constraintTop_toBottomOf="@+id/conversation_tv_satisfaction_survey"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <TextView
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/conversation_very_dissatisfied"
        android:textSize="12sp"
        android:textColor="@color/conversation_text_color_tertiary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/conversation_iv_very_dissatisfied"
        app:layout_constraintEnd_toEndOf="@+id/conversation_iv_very_dissatisfied"
        app:layout_constraintTop_toBottomOf="@+id/conversation_iv_very_dissatisfied"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/conversation_iv_dissatisfied"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/conversation_ic_dissatisfied_dark"
        app:layout_constraintStart_toEndOf="@+id/conversation_iv_very_dissatisfied"
        app:layout_constraintEnd_toStartOf="@+id/conversation_iv_neutral"
        app:layout_constraintTop_toTopOf="@+id/conversation_iv_very_dissatisfied"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <TextView
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/conversation_dissatisfied"
        android:textSize="12sp"
        android:textColor="@color/conversation_text_color_tertiary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/conversation_iv_dissatisfied"
        app:layout_constraintEnd_toEndOf="@+id/conversation_iv_dissatisfied"
        app:layout_constraintTop_toBottomOf="@+id/conversation_iv_dissatisfied"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/conversation_iv_neutral"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/conversation_ic_neutral_dark"
        app:layout_constraintStart_toEndOf="@+id/conversation_iv_dissatisfied"
        app:layout_constraintEnd_toStartOf="@+id/conversation_iv_satisfied"
        app:layout_constraintTop_toTopOf="@+id/conversation_iv_very_dissatisfied"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <TextView
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/conversation_neutral"
        android:textSize="12sp"
        android:textColor="@color/conversation_text_color_tertiary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/conversation_iv_neutral"
        app:layout_constraintEnd_toEndOf="@+id/conversation_iv_neutral"
        app:layout_constraintTop_toBottomOf="@+id/conversation_iv_neutral"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/conversation_iv_satisfied"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/conversation_ic_satisfied_dark"
        app:layout_constraintStart_toEndOf="@+id/conversation_iv_neutral"
        app:layout_constraintEnd_toStartOf="@+id/conversation_iv_very_satisfied"
        app:layout_constraintTop_toTopOf="@+id/conversation_iv_very_dissatisfied"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <TextView
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/conversation_satisfied"
        android:textSize="12sp"
        android:textColor="@color/conversation_text_color_tertiary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/conversation_iv_satisfied"
        app:layout_constraintEnd_toEndOf="@+id/conversation_iv_satisfied"
        app:layout_constraintTop_toBottomOf="@+id/conversation_iv_satisfied"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/conversation_iv_very_satisfied"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:background="@drawable/conversation_ic_very_satisfied_dark"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/conversation_iv_satisfied"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/conversation_iv_very_dissatisfied"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <TextView
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="@string/conversation_very_satisfied"
        android:textSize="12sp"
        android:textColor="@color/conversation_text_color_tertiary"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintStart_toStartOf="@+id/conversation_iv_very_satisfied"
        app:layout_constraintEnd_toEndOf="@+id/conversation_iv_very_satisfied"
        app:layout_constraintTop_toBottomOf="@+id/conversation_iv_very_satisfied"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>